--- a/app/account/login.html
+++ b/app/account/login.html
@@ -41,6 +41,15 @@
 
 {% block scripts %}
 <script>
+	$("#main-box").on("keyup", function(event) {
+		// Cancel the default action, if needed
+		//event.preventDefault();
+		// Number 13 is the "Enter" key on the keyboard
+		if (event.keyCode === 13) {
+			// Trigger the button element with a click
+			$("#login").click();
+		}
+	});
 
 	firebase.auth().onAuthStateChanged(function(user) {
 		if (user) {
